--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 30
     defaultConfig {
@@ -20,6 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+ buildFeatures{
+     dataBinding true
+
+     viewBinding true
+ }
 }
 
 dependencies {
@@ -32,4 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    //Logger
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
