--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     //Logger
     implementation "com.jakewharton.timber:timber:4.7.1"
+
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    implementation 'androidx.fragment:fragment-ktx:1.3.1'
 }
